# rust-pgvector-example

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20231216120109_primary.sql
src/: main.rs
