[package]
name = "rust-pgvector-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.13", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
pgvector = { version = "0.3", features = ["sqlx"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1" }
serde_json = "1"
